
Internet Explorer 6 or under are NOT supported!
FireFox/Safari/Chrome/Opera will work fine as for HTML5 supported version.
It's hard to check all versions above browsers as you know. I hope you understand.

=================================
Change Log
=================================

Ver.3.7
- Check required PHP extensions (mstring and OpenSSL), especially on Windows.

Ver.3.6 (2013/7/5)
- Support the FileMaker's checkbox set feature. (Thanks to Atushi Matsuo)
- Get started CI ! with TravisCI.
- Debug messages are written to the browser's JS console too.
- 'INTERMediator.supressDebugMessageOnPage = true;' can suppress the debug message on a page.
  'INTERMediator.supressErrorMessageOnPage = true;' can suppress the error message on a page.
  If you wanna check messages just on the console of the browser, this is sutabile. Both of defaults are false.

Ver.3.5 (2013/6/25)
- File Upload component supports its progress bar.
- Prevent to show the password in an URL for the FileMaker_FX data class.
- On the authentication, an email can be used as a user name with the second parameter of IM_Entry function.
- Password resetting supporting, but it should make pages with the .php extension.
- DataConverter_HTMLString can change the link text for an url strings with setting 'parameter'=>true.
- DB_PDO_Test class was rewritten for the current architecture.
- [BUG FIX] INTERMediatorOnPage.getNodeIdsFromIMDefinition method didn't work correctly.

Ver.3.4 (2013/6/9)
- Login Panel customizing. You could use the isShowChangePassword, defaultBackgroundImage,
  defaultBackgroundColor and loginPanelHTML properties of the INTERMediatorOnPage.
- INTERMediatorOnPage.doAfterConstruct = function(){}; will call after constructing the page.
- [BUG FIX] Login/Logout issues were fixed. JS Cookie handling was modified by using the "max-age" key.
- [BUG FIX] Fix the error in spite of the password was collrectly changed.