@@ -12,3 +12,4 @@ before_script:
 
 script:
   - phpunit DB_PDO_Test.php
+  - phpunit INTERMediator_Test.php
