@@ -42,7 +42,7 @@
     <table border="1">
         <thead>
         <tr>
-            <th>id's</th><th>name</th><th>unitprice</th><th>photo</th>
+            <th>id's</th><th>name</th><th>unitprice</th><th>photo</th><th>Object Field</th>
         </tr>
         </thead>
         <tbody>
@@ -55,6 +55,9 @@
             <td>
                 <img width="30" src="images/" class="IM[productlist@photofile@#src]"/>
                 <a class="IM[productlist@ack_link@href|productlist@acknowledgement]"></a>
+            </td>
+            <td>
+                <img width="50" src="contexts_FMS.php?media=" class="IM[productlist@obj@#src]"/>
             </td>
         </tr>
         </tbody>
