@@ -48,6 +48,8 @@ Change Log
 
 Ver.3.7
 - Check required PHP extensions (mstring and OpenSSL), especially on Windows.
+- MediaAccess class can work for a non-authentication settings.
+- FileMaker's object field supported.
 
 Ver.3.6 (2013/7/5)
 - Support the FileMaker's checkbox set feature. (Thanks to Atushi Matsuo)
